# bid

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  USER_GUIDE.md  final-check.md  optimization_plan.md  restart.sh  rule.md  技术方案自动生成工作流 — Dify 搭建指南(含人工审核).md
app/: .dockerignore  .env.example  ACCEPTANCE_AUDIT.md  Dockerfile  IMPLEMENTATION_SPEC.md  README.md  REQUIREMENTS.md  REVIEW_NOTES.md  RUNTIME_TEST_REPORT.md  docker-compose.dev.yml  docker-compose.yml
app/backend/: alembic.ini  pyproject.toml
app/backend/migrations/: env.py
app/backend/migrations/versions/: 0001_initial.py  0002_user_model_config.py  0003_model_catalog_chapter_model.py  0004_docxjob_scope_chapter.py  0005_v2_schema_bump.py  0006_chapters_section.py  0007_chapters_parent_titles.py  0008_project_blackboard_entities.py  0009_document_stored_path.py  0010_project_template_pack.py  0011_project_blackboard_embeddings.py  0012_chapter_references.py  0013_embedding_model_config.py
app/backend/src/bid_app/: __init__.py  config.py  db.py  deps.py  main.py
app/backend/src/bid_app/api/: __init__.py  admin.py  auth.py  chapters.py  docx.py  health.py  me.py  projects.py  stream.py
app/backend/src/bid_app/cli/: __init__.py  flush_running_workflows.py  reset_admin.py  run_local.py  test_llm.py
app/backend/src/bid_app/core/: __init__.py  crypto.py  error_log.py  login_throttle.py  middleware.py  rate_limit.py  security.py  security_headers.py
app/backend/src/bid_app/events/: __init__.py  bus.py
app/backend/src/bid_app/migrations/: __init__.py
app/backend/src/bid_app/models/: __init__.py  api_key.py  base.py  chapter.py  chapter_version.py  document.py  docx_job.py  project.py  review_event.py  run.py  token_usage.py  user.py
app/backend/src/bid_app/schemas/: __init__.py  admin.py  auth.py  chapters.py  projects.py
app/backend/src/bid_app/services/: __init__.py  api_key_validator.py  blackboard_retrieval.py  concurrency.py  document_extractor.py  docx_export.py  docx_invalidation.py  embeddings.py  html_sanitize.py  hybrid_retrieval.py  llm.py  redaction.py  redaction_rules.yaml  template_validator.py  token_usage.py
app/backend/src/bid_app/worker/: __init__.py  lifecycle.py  settings.py  tasks.py
app/backend/src/bid_app/workflow/: __init__.py  blackboard.py  checkpointer.py  graph.py  humanize.py  postprocess.py  resolve.py  state.py  sync.py
app/backend/src/bid_app/workflow/nodes/: __init__.py  assemble.py  categorize_blackboard.py  chapter_generate_gate.py  extract_documents.py  gen_visuals.py  generate_outline.py  human_review.py  material_understanding.py  material_understanding_review.py  merge_chapter.py  outline_review.py  parse_outline.py  pick_chapter.py  review_chapter.py  update_state.py  write_chapter.py
app/backend/src/bid_app/workflow/prompts/: __init__.py  _common.py  assemble_prompt.py  categorize_blackboard.py  humanizer_zh_prompt.py  material_understanding.py  outline_prompt.py  review_chapter_prompt.py  write_architecture_prompt.py  write_chapter_prompt.py  write_meeting_prompt.py  write_module_prompt.py  write_principle_prompt.py
app/backend/src/bid_app/workflow/renderers/: __init__.py
app/backend/src/bid_app/workflow/templates/: __init__.py  gov_consumer_platform_v1.json
app/backend/templates/: README.md  reference.docx
app/backend/tests/: conftest.py  poc_tool_calling.py  test_blackboard.py  test_blackboard_retrieval.py  test_blackboard_tool.py  test_call_llm_with_tools.py  test_categorize_blackboard.py  test_chapter_references.py  test_chapter_routing.py  test_docx_export_chapter_scope.py  test_embedding_model_config.py  test_embeddings.py  test_finalize_early.py  test_html_sanitize.py  test_humanize_final.py  test_hybrid_retrieval.py  test_markdown_visuals.py  test_material_understanding.py  test_mermaid_render.py  test_parse_outline_hierarchy.py  test_postprocess_style.py  test_prompt_entities.py  test_redaction.py  test_rrf_fusion.py  test_schema_migration.py  test_selective_generation.py  test_skeleton_injection_order.py  test_sync_chapter_sql.py  test_template_skeleton.py  test_template_validator.py  test_visual_anchors.py
app/docker/: entrypoint.sh  init-test-db.sh  mermaid-config.json  mermaid.css  pg-backup.sh  puppeteer-config.json  supervisord.conf
app/frontend/: .env.example  .eslintrc.cjs  .gitignore  .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/frontend/src/: App.tsx  main.tsx  router.tsx
app/frontend/src/api/: admin.ts  chapters.ts  docx.ts  me.ts  projects.ts
app/frontend/src/components/: AppShell.tsx  BlackboardEntitiesPanel.tsx  ChapterPreview.tsx  ChapterSidebar.tsx  ConfirmDialog.tsx  DashScopeBanner.tsx  DataExportPanel.tsx  GlobalProgressBanner.tsx  PlaceholderBanner.tsx  RequireAuth.tsx  ReviewActions.tsx
app/frontend/src/hooks/: useAuth.ts  useSSE.ts  useToast.tsx
app/frontend/src/lib/: apiFetch.ts  markdown.tsx  mermaid-utils.ts  mock-flag.ts  mock.ts  projectRoute.ts  redaction.ts  types.ts
app/frontend/src/pages/: AdminPage.tsx  LoginPage.tsx  (+10 more)
app/scripts/: create-test-db.sh  gen-secrets.sh  install.sh  restart-after-update.sh  restore-backup.sh  seed-admin-user.sh  seed-test-key.sh  sync-postgres-password.sh  upgrade-to-hybrid-retrieval.sh  upgrade-to-template-skeleton.sh  v2-upgrade-runbook.md
docs/: architecture.mmd  v2-pr-checklist.md  投标方案生成器功能介绍.md
(+11 files in other folders)
