[project]
name = "bid-app"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.34,<0.40",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy[asyncio]>=2.0.36,<2.1",
  "asyncpg>=0.30,<0.31",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
  "langgraph>=0.6,<0.7",
  "langgraph-checkpoint-postgres>=2.0,<3",
  "litellm>=1.55,<2",
  "arq>=0.26,<0.27",
  "redis>=5.2,<6",
  "passlib[bcrypt]>=1.7.4,<2",
  # ⚠️ pin bcrypt < 5:passlib 1.7.4 的 detect_wrap_bug 假设 bcrypt verify
  # 不 raise,bcrypt 5.0 严格 reject > 72 bytes 时 raise ValueError → backend
  # 初始化阶段就崩,migration 0001(bcrypt.using(rounds=12).hash)挂死。
  # passlib 1.8+ 修了但未 release,先 pin 到 4.x。
  "bcrypt<5",
  "pyjwt[crypto]>=2.10,<3",
  "cryptography>=44.0,<45",
  "slowapi>=0.1.9,<0.2",
  "markitdown[all]>=0.0.2",
  "python-multipart>=0.0.20,<0.1",
  "structlog>=24.4,<25",
  "httpx>=0.28,<0.29",
  "click>=8.1,<9",
  "rich>=13.9,<14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-passlib",
]

[project.scripts]
bid-app-cli = "bid_app.cli.run_local:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bid_app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
