[project]
name = "bid-app"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.34,<0.40",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy[asyncio]>=2.0.36,<2.1",
  "asyncpg>=0.30,<0.31",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
  "langgraph>=0.6,<0.7",
  "langgraph-checkpoint-postgres>=2.0,<3",
  "litellm>=1.55,<2",
  "arq>=0.26,<0.27",
  "redis>=5.2,<6",
  "passlib[bcrypt]>=1.7.4,<2",
  # ⚠️ pin bcrypt < 5:passlib 1.7.4 的 detect_wrap_bug 假设 bcrypt verify
  # 不 raise,bcrypt 5.0 严格 reject > 72 bytes 时 raise ValueError → backend
  # 初始化阶段就崩,migration 0001(bcrypt.using(rounds=12).hash)挂死。
  # passlib 1.8+ 修了但未 release,先 pin 到 4.x。
  "bcrypt<5",
  "pyjwt[crypto]>=2.10,<3",
  "cryptography>=44.0,<45",
  "slowapi>=0.1.9,<0.2",
  "markitdown[all]>=0.0.2",
  "python-multipart>=0.0.20,<0.1",
  "structlog>=24.4,<25",
  "httpx>=0.28,<0.29",
  "click>=8.1,<9",
  "rich>=13.9,<14",
  # PR-M6-1 / D3:脱敏规则 YAML 解析。pyyaml 已经被 markitdown/litellm 等
  # 上游间接拉入,这里显式声明避免上游版本调整时无声丢依赖。
  "pyyaml>=6.0,<7",
  # PR-M7-3 / D2:HTML 黑板 — markdown → HTML 转换 + bleach 白名单清洗。
  "markdown>=3.7,<4",
  "bleach>=6.1,<7",
  # Phase 2A (2026-05-16):实体黑板 BM25 检索 + 中文 jieba 分词。
  # rank_bm25 纯 Python 无 C 扩展;jieba 拉 ~5MB 字典,启动时一次性加载。
  "rank-bm25>=0.2.2,<0.3",
  "jieba>=0.42,<0.43",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-passlib",
  "types-PyYAML",
  "types-bleach",
  "types-Markdown",
]

[project.scripts]
bid-app-cli = "bid_app.cli.run_local:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bid_app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
# N818: 异常类名后缀;本项目内部异常名(SlotLost / LLMRetryFailed / ChapterGenerationFailed
# 等)是 D-* 设计标记,跨 8+ 文件引用,改名风险大于收益,统一豁免。
ignore = ["E501", "N818"]

[tool.ruff.lint.per-file-ignores]
# prompt 文件对中文 LLM,正文里 × ÷ — 等数学/排版字符是面向阅读者的真实内容,
# RUF001/RUF002/RUF003(ambiguous unicode)在这里全是误报,豁免整个 prompts/。
"src/bid_app/workflow/prompts/*.py" = ["RUF001", "RUF002", "RUF003"]
# PR-M6-1:脱敏服务面向中文文本(org_suffixes 等),docstring 与 inline 注释
# 大量使用中文标点(全角括号 / 引号 / 顿号),RUF002 在这里也是误报。
"src/bid_app/services/redaction.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_redaction.py" = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

# langgraph 0.6 / langgraph-checkpoint-postgres 2.0 的 stub 偶尔与运行时
# 不符(AsyncPostgresSaver.conn 期待 dict_row 泛型但 pool 推 tuple),为防止
# 未来 untype 的 internal 模块漏出 missing-import,显式宽松。
# jieba / rank_bm25 (Phase 2A) 上游无 py.typed,运行时调用都是简单 list/float
# 没有 type ambiguity,豁免 missing-import 即可。
[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langgraph_checkpoint_postgres.*",
    "jieba",
    "jieba.*",
    "rank_bm25",
    "rank_bm25.*",
]
ignore_missing_imports = true

# redis-py 5.x async client 的 stub 设计是 ``Awaitable[X] | X`` union(同步/集群
# 双形态),且 ``from_url`` 标 untyped、``ScriptCommands.eval`` 的 ARGV 强制 str
# 而 redis 实际 coerce numerics。修这些得在每个调用点 cast,不如对几个 redis 重度
# 调用方文件统一豁免几类已知误报(代码本身的 await/参数类型在运行时都对)。
[[tool.mypy.overrides]]
module = [
    "bid_app.services.concurrency",
    "bid_app.events.bus",
    "bid_app.core.login_throttle",
    "bid_app.services.docx_export",
    "bid_app.main",
]
disable_error_code = ["no-untyped-call", "no-any-return", "misc", "arg-type"]
